<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="0dp"
        android:background="@color/black"
        android:id="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insta_saver"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"/>

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/include"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="-3dp"
        android:background="@drawable/bg"
        app:tabIndicatorAnimationDuration="@integer/material_motion_duration_medium_1"
        app:tabIndicatorAnimationMode="elastic"
        app:tabIndicatorColor="@color/y"
        app:tabIndicatorHeight="5.5dp"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/y"
        app:tabTextColor="@color/t">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dp" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/reel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reel" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/igtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/igtv" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/include" />

</RelativeLayout>