<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:id="@+id/components"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textColorHint="@color/white"
            android:hint="@string/paste_the_reels_link_here"
            android:maxLines="1"
            android:textSize="15sp"
            android:ellipsize="end"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:id="@+id/getreellink"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/getreel"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@drawable/butonbg"
            android:text="@string/get"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/components"
        android:layout_above="@+id/downloadReel"
        android:layout_margin="20dp">

        <VideoView
            android:id="@+id/particularReel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginBottom="5dp"
            android:foregroundGravity="center"/>
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/downloadReel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/butonbg"
        android:text="@string/download"
        android:textColor="@color/white"
        android:textSize="15sp">

    </androidx.appcompat.widget.AppCompatButton>

</RelativeLayout>




